4.0.3
Support for specifying STANDARD or EXTENDED in UploadImportAndApply-ConfigPackageInBcContainer
Issue #2685 Typo in Get-BcArtifactUrl

4.0.2
Issue #2664 Image rebuild forced by different tags of a generic dev image
Issue #2671 In BcContainerHelper - 'Get-NavCompany' is not recognized as the name of a cmdlet !!
Issue #2673 New-AppSourceSubmission appears to "timeout" and just continuously reauthenticate
Add parameter checkAlreadyInstalled to Publish-BcContainerApp to check whether the app is already installed in the same or newer version
Add parameter excludeInstalledApps to Sort-AppFilesByDependencies to exclude apps present in this array with the same or newer version
Country TT points to BR instead of W1 (for collation)

4.0.1
Add newline when waiting for auth context

4.0.0
Added AppSource Validation functions
New functions Invoke-IngestionAPIGet, Invoke-IngestionAPIGetCollection, Invoke-IngestionAPIPost, Invoke-IngestionAPIPut, Invoke-IngestionAPIDelete to interact with Partner Center Ingestion API
New function Get-AppSourceProduct to get information about products on AppSource
New function Get-AppSourceSubmission to get detailed information about a submission of a product on AppSource
New function New-AppSourceSubmission to create a submission of a new version of a product on AppSource
New function Promote-AppSourceSubmission to promote a submission of a product on AppSource from preview to live / production
New function Cancel-AppSourceSubmission to cancel an in progress submission of a product on AppSource
Support getting NextMajor of countries with no current release in Get-BcArtifactUrl
Added new functions New-ALGoAppSourceContext, New-ALGoStorageContext and New-ALGoAuthContext to create context structures used for AL-Go for GitHub
Issue #2650 issue warning if TaskScheduler is not running when using UploadImportAndApply-ConfigPackageInBcContainer

3.0.12
Error in retry method in Get-BcArtifactUrl (3.0.11)