@@ -1,6 +1,7 @@
 4.0.3
 Support for specifying STANDARD or EXTENDED in UploadImportAndApply-ConfigPackageInBcContainer
 Issue #2685 Typo in Get-BcArtifactUrl
+Issue #2681 New-BcContainerWizard doesn't seem to support Public Preview Versions
 
 4.0.2
 Issue #2664 Image rebuild forced by different tags of a generic dev image
